--- a/main.html
+++ b/main.html
@@ -17,11 +17,11 @@
 	Software developers create software to meet user needs by employing diagrams and models, writing code, and ensuring overall functionality. These professionals design, build, and implement computer programs and applications
 </p>
 	<ul>
-		<li>Cloud</li>
-		<li>Desktop</li>
-		<li>Video Sport</li>
-		<li>Mobile,</li>
-		<li>Web</li>
+		<li>Cloud development</li>
+		<li>Desktop development</li>
+		<li>Video Sport development</li>
+		<li>Mobile development</li>
+		<li>Web development</li>
 	</ul>
 
 
