--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 "https://images.unsplash.com/photo-1505028106030-e07ea1bd80c3?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDR8fHNvZnR3YXJlJTIwZGV2ZWxvcG1lbnQlMjBjYXJlZXIlMjBwYXRofGVufDB8fHx8MTY3MjMwNDEyNg&ixlib=rb-4.0.3&q=80&w=2000"
         alt="acciojob logo" width="300" height="300"> 
 <p>
-	Software developers create software to meet user needs by employing diagrams and models, writing code, and ensuring overall functionality. These professionals design, build, and implement computer programs and applications
+	5 software program developer profession paths
 </p>
 	<ul>
 		<li>Cloud development</li>
